@@ -47,6 +47,7 @@
  * #1444 (The calibration examples are unclear)
  * #1947 (The constructor of FunctionalChaosResult is undocumented)
  * #1958 (Performance of OrthogonalUniVariatePolynomial (precision, speed))
+ * #2012 (Cannot sample a ConditionedGaussianProcess on a mesh containing conditioning points)
 
 == 1.18 release (2021-11-10) == #release-1.18
 
